--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -23,6 +23,14 @@
         }
     }
 
+    &__freelance-content-container {
+
+        @include desktop {
+            display: flex;
+            align-items: center;
+        }
+    }
+
     &__freelance {
         margin: 0 1rem 2.75rem;
         margin-bottom: 2.75rem;
@@ -43,6 +51,20 @@
             text-decoration: underline;
             text-underline-offset: 1rem;
             text-decoration-color: $secondary-pink;
+        }
+
+        &--hidden {
+            display: none;
+
+            @include desktop {
+                padding: 1rem 0 2.75rem;
+                display: flex;
+                font-size: 2.25rem;
+                color: $basic-white;
+                text-decoration: underline;
+                text-underline-offset: 1rem;
+                text-decoration-color: $secondary-pink;
+            }
         }
     }
 
