--- a/src/components/Landing/Landing.scss
+++ b/src/components/Landing/Landing.scss
@@ -32,9 +32,16 @@
         }
     }
 
+    &__subtitle-content {
+
+        @include desktop {
+            display: flex;
+        }
+    }
+
     &__subtitle {
         padding-top: 3rem;
-        width: 60%;
+        width: 100%;
         font-size: 1.5rem;
         text-align: center;
 
@@ -42,6 +49,15 @@
             padding-top: 0;
             width: 100%;
             @include desktop-subtitle;
+        }
+
+        &--hidden {
+            display: none;
+
+            @include desktop {
+                display: flex;
+                font-size: 2.5rem;
+            }
         }
     }
 }
