--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -19,7 +19,7 @@
     }
 
     &__title {
-        padding: 1rem 0;
+        padding: 1.5rem 0 2rem;
         font-size: 1.75rem;
         text-transform: uppercase;
         text-align: center;
@@ -46,7 +46,7 @@
     }
 
     &__card {
-        margin-bottom: 1rem;
+        margin-bottom: 2rem;
         display: flex;
         flex-direction: column;
         align-items: center;
